syntax = "proto3";
package equation;

service Adder {
    rpc Add (CalculationRequest) returns (CalculationResponse);
}

service Subtractor {
    rpc Subtract (CalculationRequest) returns (CalculationResponse);
}

service Multiplier {
    rpc Multiply (CalculationRequest) returns (CalculationResponse);
}

service Divider {
    rpc Divide (CalculationRequest) returns (CalculationResponse);
}

message CalculationRequest {
    string first_arg = 1;
    string second_arg = 2;
}

message CalculationResponse {
    int32 result = 2;
}